ui/SalesCard/sales.module.css
.salesCard {
  display: flex;
  flex-direction: row;
  align-items: center;
  position: relative;
  padding: 20px 20px 20px 16px;
  background: #fafafa;
  box-shadow: 0 5px 16px 0 rgba(0, 0, 0, 0.15);
  max-width: 401px;
  height: 136px;
  margin: 16px auto;
}

.bookmarkIcon {
  position: absolute;
  top: 16px;
  right: 20px;
  width: 25px;
  height: 32px;
}

.bookmarkIcon img {
  width: 100%;
  height: 100%;
  display: block;
}
.bookmarkIcon {
  cursor: pointer;
  transition: transform 0.2s ease;
}

.bookmark:hover {
  transform: scale(1.1);
}

.salesCardContent {
  display: flex;
  align-items: center;
  gap: 15px;
  flex: 1;
}

.logoSection {
  display: flex;
  align-items: center;
  justify-content: center;
}

.logo {
  margin-left: 0px;
  width: 150px;
  border-radius: 5px;
}

.offerSection {
  gap: 4px;
}

.brandName {
  font-size: 1.25rem;
  font-weight: 600;
  margin-top: -20px;
  color: #1a1a1a;
}

.offerText {
  font-size: 0.8125rem;
  line-height: 1rem;
  color: #4a4a4a;
}

.actionsSection {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  margin-left: 16px;
  gap: 30px;
  justify-content: space-between;
  margin-top: 70px;
}

.offerButton {
  background-color: #ff4040;
  color: white;
  border: none;
  border-radius: 5px;
  padding: 3px 15px;
  font-size: 15px;
}

